--- a/17_AGENDA/css/styles.css
+++ b/17_AGENDA/css/styles.css
@@ -13,7 +13,7 @@
     margin: 0 auto;
 }
 
-#contacts-table thead{
+#contacts-table thead {
     color: #FFF;
     background-color: #007BFF;
 }
@@ -63,4 +63,15 @@
     max-width: 500px;
     margin: 0 auto;
     margin-top: 30px;
+}
+
+/* SHOW / CONTATO INDIVIDUAL */
+
+#view-contact-container {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.bold {
+    font-weight: bold;
 }
