criar contato e css

--- a/17_AGENDA/css/styles.css
+++ b/17_AGENDA/css/styles.css
@@ -75,3 +75,37 @@
 .bold {
     font-weight: bold;
 }
+
+#back-link-container{
+    display: block;
+    width: 500px;
+    margin: 30px auto 0;
+}
+
+#back-link{
+    border: 1px solid #007BFF;
+    color: #007BFF;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+#back-link{
+    text-decoration: none;
+}
+
+/* CREATE*/
+
+.container{
+    max-width: 550px;
+}
+
+.form-group{
+    padding-bottom: 10px;
+}
+
+#create-form, #edit-form{
+    margin: 0;
+    display: contents;
+}
+
+
