--- a/18_MovieStar/css/styles.css
+++ b/18_MovieStar/css/styles.css
@@ -55,12 +55,37 @@
     transition: .5s;
 }
 
-.navbar-nav .nav-item .nav-lnk:hover{
+.navbar-nav .nav-item .nav-link:hover{
     color: #999;
 }
 
 .bold{
     font-weight: bold;
+}
+
+.msg-container {
+    background-color: #000;
+    padding: 15px;
+}
+
+.msg {
+    width: 60%;
+    margin: 0 auto;
+    padding: 0 10px;
+    border: solid 1px #000;
+    text-align: center;
+}
+
+.msg.error {
+    color: #842029;
+    background-color: #F8D7DA;
+    border-color: #F5C2C7;
+}
+
+.msg.sucess {
+    color: #0F5132;
+    background-color: #D1E7DD;
+    border-color: #BADBCC;
 }
 
 /* Home */
