--- a/18_MovieStar/css/styles.css
+++ b/18_MovieStar/css/styles.css
@@ -1,3 +1,13 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh; /* Ocupa 100% da altura da viewport */
+    display: flex;
+    flex-direction: column;
+    background-color: #000;
+}
+
 /* NAVBAR */
 .navbar-brand{
     position: relative;
@@ -114,7 +124,7 @@
 
 #login-container form,
 #register-container form{
-    max-width: 400px;
+    max-width: 100%;
     margin: 30px;
 }
 
@@ -140,6 +150,7 @@
     text-align: center;
     margin: 0;
     padding: 20px;
+    margin-top: auto;
 }
 
 #social-container ul,
